# TheBus2Komsi

./: .gitignore  API-Mapping.md  Cargo.toml  Nachrichten.txt  README.de.md  README.md  SECURITY.md  TheBus2Komsi.ini  build.sh  liesmich.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  rust.yml
src/: api.rs  api2vehicle.rs  komsi.rs  lib.rs  main.rs  opts.rs  realmain.rs  serial.rs  vehicle.rs  vehiclediff.rs
tests/: json_deserialization_test.rs  urbino_12m_2D.json
tests/json/: man_lionscity.json  mb_ecitaro.json  scania_citywide.json  solaris_urbino.json  vdl_citea.json
