[package]
name = "the_bus_2_komsi"
version = "1.10.0"
edition = "2024"
rust-version = "1.88"
authors = ["ThatZok <af@komplix.de>"]
license = "GPL-3.0-or-later"

[dependencies]
serde_json = "1.0"
serialport = "4.7"
clap = { version = "4.5", features = ["derive"] }
configparser = "3.1"
tokio = { version = "1.48", features = ["full"] }
the-bus-telemetry = "3.0"
komsi = "0.5"

[features]
# When enabled, disables all serial port communication with Komsi hardware
# Used for testing the API without requiring physical hardware
disablekomsiport = []

[[bin]]
name = "TheBus2Komsi"
path = "src/bin/thebus2komsi.rs"

[[bin]]
name = "TheBusTestAPI"
path = "src/bin/thebustestapi.rs"
required-features = ["disablekomsiport"]
