[package]
name = "the_bus_2_komsi"
version = "1.19.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["ThatZok <af@komplix.de>"]
license = "GPL-3.0-or-later"

[dependencies]
serde_json = "1.0"
serialport = "4.9"
clap = { version = "4.6", features = ["derive"] }
configparser = "3.1"
tokio = { version = "1.40", features = ["full"] }
the-bus-telemetry = "5.2"
komsi = "2.0"
chrono = "0.4"
nusb = { version = "0.2.3", features = ["tokio"] }
futures-util = "0.3"

[features]
# When enabled, disables all serial port communication with Komsi hardware
# Used for testing the API without requiring physical hardware
disablekomsiport = []

[[bin]]
name = "TheBus2Komsi"
path = "src/bin/thebus2komsi.rs"

[[bin]]
name = "TheBusTestAPI"
path = "src/bin/thebustestapi.rs"
required-features = ["disablekomsiport"]
